--- a/ruoyi-admin/src/main/resources/templates/login.html
+++ b/ruoyi-admin/src/main/resources/templates/login.html
@@ -46,6 +46,8 @@
                     <p class="m-t-md">你若不离不弃，我必生死相依</p>
                     <input type="text"     name="username" class="form-control uname"     placeholder="用户名"     />
                     <input type="password" name="password" class="form-control pword"     placeholder="密码"    />
+                    <input th:if="${googleAuthenticator==true}" type="text" name="googlecode" style="color: black" class="form-control uname"
+                           placeholder="谷歌验证码"/>
 					<div class="row m-t" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />
