--- a/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="ui-layout-center">
 		<div class="container-div">
 			<div class="row">
@@ -60,7 +60,7 @@
 						</div>
 					</form>
 				</div>
-				
+
 		        <div class="btn-group-sm" id="toolbar" role="group">
 		        	<a class="btn btn-success" onclick="$.operate.addTab()" shiro:hasPermission="system:user:add">
 		                <i class="fa fa-plus"></i> 新增
@@ -78,15 +78,15 @@
 			            <i class="fa fa-download"></i> 导出
 			        </a>
 		        </div>
-		        
-		        <div class="col-sm-12 select-table table-striped">
+
+        <div class="col-sm-12 select-table table-striped">
 				    <table id="bootstrap-table"></table>
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	<th:block th:include="include :: footer" />
+
+  <th:block th:include="include :: footer" />
 	<th:block th:include="include :: layout-latest-js" />
 	<th:block th:include="include :: ztree-js" />
 	<script th:inline="javascript">
@@ -156,26 +156,41 @@
 		        },
 		        {
 		        	visible: editFlag == 'hidden' ? false : true,
-		        	title: '用户状态',
-		        	align: 'center',
-		        	formatter: function (value, row, index) {
-		        		return statusTools(row);
-		        	}
-		        },
-		        {
-		            field: 'createTime',
-		            title: '创建时间',
-		            sortable: true
-		        },
-		        {
-		            title: '操作',
-		            align: 'center',
-		            formatter: function(value, row, index) {
-		                if (row.userId != 1) {
-		                	var actions = [];
-			                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.editTab(\'' + row.userId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-			                actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.userId + '\')"><i class="fa fa-remove"></i>删除</a> ');
-			                var more = [];
+              title: '用户状态',
+              align: 'center',
+              formatter: function (value, row, index) {
+                return statusTools(row);
+              }
+            },
+              {
+                field: 'createTime',
+                title: '创建时间',
+                sortable: true
+              },
+              {
+                field: 'googlekey',
+                title: '谷歌密钥',
+                formatter: function (value, row, index) {
+                  return `<button type="submit" class="btn btn-success" onclick="copyText('${value}')"  class="copy-to-clipboard">复制密钥</button>`
+                }
+              },
+
+              {
+                field: '刷新谷歌密钥',
+                title: '谷歌密钥',
+                formatter: function (value, row, index) {
+                  return `<button type="submit" class="btn btn-warning" onclick="updateGoogleKey(${row.userId})"  class="copy-to-clipboard">刷新密钥</button>`
+                }
+              },
+              {
+                title: '操作',
+                align: 'center',
+                formatter: function (value, row, index) {
+                  if (row.userId != 1) {
+                    var actions = [];
+                    actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.editTab(\'' + row.userId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                    actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.userId + '\')"><i class="fa fa-remove"></i>删除</a> ');
+                    var more = [];
 			                more.push("<a class='btn btn-default btn-xs " + resetPwdFlag + "' href='javascript:void(0)' onclick='resetPwd(" + row.userId + ")'><i class='fa fa-key'></i>重置密码</a> ");
 			                more.push("<a class='btn btn-default btn-xs " + editFlag + "' href='javascript:void(0)' onclick='authRole(" + row.userId + ")'><i class='fa fa-check-square-o'></i>分配角色</a>");
 			                actions.push('<a tabindex="0" class="btn btn-info btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + more.join('') + '"><i class="fa fa-chevron-circle-right"></i>更多操作</a>');
@@ -188,8 +203,8 @@
 		    };
 		    $.table.init(options);
 		}
-		
-		function queryDeptTree()
+
+    function queryDeptTree()
 		{
 			var url = ctx + "system/dept/treeData";
 			var options = {
@@ -198,27 +213,27 @@
 		        onClick : zOnClick
 		    };
 			$.tree.init(options);
-			
-			function zOnClick(event, treeId, treeNode) {
+
+      function zOnClick(event, treeId, treeNode) {
 				$("#deptId").val(treeNode.id);
 				$("#parentId").val(treeNode.pId);
 				$.table.search();
 			}
 		}
-		
-		$('#btnExpand').click(function() {
+
+    $('#btnExpand').click(function() {
 			$._tree.expandAll(true);
 		    $(this).hide();
 		    $('#btnCollapse').show();
 		});
-		
-		$('#btnCollapse').click(function() {
+
+    $('#btnCollapse').click(function() {
 			$._tree.expandAll(false);
 		    $(this).hide();
 		    $('#btnExpand').show();
 		});
-		
-		$('#btnRefresh').click(function() {
+
+    $('#btnRefresh').click(function() {
 			queryDeptTree();
 		});
 
@@ -233,14 +248,14 @@
 		    var url = prefix + '/resetPwd/' + userId;
 		    $.modal.open("重置密码", url, '800', '300');
 		}
-		
-		/* 用户管理-分配角色 */
+
+    /* 用户管理-分配角色 */
 		function authRole(userId) {
 		    var url = prefix + '/authRole/' + userId;
 		    $.modal.openTab("用户分配角色", url);
 		}
-		
-		/* 用户状态显示 */
+
+    /* 用户状态显示 */
 		function statusTools(row) {
 		    if (row.status == 1) {
     			return '<i class=\"fa fa-toggle-off text-info fa-2x\" onclick="enable(\'' + row.userId + '\')"></i> ';
@@ -248,8 +263,8 @@
     			return '<i class=\"fa fa-toggle-on text-info fa-2x\" onclick="disable(\'' + row.userId + '\')"></i> ';
     		}
 		}
-		
-		/* 用户管理-停用 */
+
+    /* 用户管理-停用 */
 		function disable(userId) {
 			$.modal.confirm("确认要停用用户吗？", function() {
 				$.operate.post(prefix + "/changeStatus", { "userId": userId, "status": 1 });
@@ -263,20 +278,35 @@
 		    })
 		}
 	</script>
+<input type="text"   id="inputcopy">
 </body>
 <!-- 导入区域 -->
 <script id="importTpl" type="text/template">
 <form enctype="multipart/form-data" class="mt20 mb10">
 	<div class="col-xs-offset-1">
 		<input type="file" id="file" name="file"/>
-		<div class="mt10 pt5">
-			<input type="checkbox" id="updateSupport" name="updateSupport" title="如果登录账户已经存在，更新这条数据。"> 是否更新已经存在的用户数据
-			 &nbsp;	<a onclick="$.table.importTemplate()" class="btn btn-default btn-xs"><i class="fa fa-file-excel-o"></i> 下载模板</a>
-		</div>
-		<font color="red" class="pull-left mt10">
-			提示：仅允许导入“xls”或“xlsx”格式文件！
-		</font>
-	</div>
+    <div class="mt10 pt5">
+      <input type="checkbox" id="updateSupport" name="updateSupport" title="如果登录账户已经存在，更新这条数据。"> 是否更新已经存在的用户数据
+      &nbsp; <a onclick="$.table.importTemplate()" class="btn btn-default btn-xs"><i class="fa fa-file-excel-o"></i>
+      下载模板</a>
+    </div>
+    <font color="red" class="pull-left mt10">
+      提示：仅允许导入“xls”或“xlsx”格式文件！
+    </font>
+  </div>
 </form>
 </script>
+<script>
+  function copyText(text) {
+    var input = document.getElementById("inputcopy");
+    input.value = text; // 修改文本框的内容
+    input.select(); // 选中文本
+    document.execCommand("copy"); // 执行浏览器复制命令
+    $.modal.alertSuccess("复制成功")
+  }
+  function updateGoogleKey(userId) {
+    $.operate.save(prefix + "/updategooglekey/"+userId);
+  }
+</script>
+
 </html>
